Ported to 1.20.3
Note: bulk item filter gui screen buttons currently not working