@@ -15,6 +15,7 @@ public class CompiledFluidModule2 extends CompiledFluidModule1 {
 
     @Override
     List<ModuleTarget> setupTargets(ModularRouterBlockEntity router, ItemStack stack) {
-        return Collections.singletonList(TargetedModule.getTarget(stack, !router.nonNullLevel().isClientSide));
+        ModuleTarget target = TargetedModule.getTarget(stack, !router.nonNullLevel().isClientSide);
+        return target == null ? List.of() : List.of(target);
     }
 }
